Fix deprecated data type constructors.