@@ -571,7 +571,7 @@ class ReferenceMerger extends AbstractListingMerger {
 			opIndexes = new ArrayList<>();
 			typeConflicts.put(address, opIndexes);
 		}
-		opIndexes.add(new Integer(opIndex));
+		opIndexes.add(Integer.valueOf(opIndex));
 		conflictSet.addRange(address, address);
 	}
 
@@ -599,7 +599,7 @@ class ReferenceMerger extends AbstractListingMerger {
 			opIndexes = new ArrayList<>();
 			primaryConflicts.put(address, opIndexes);
 		}
-		opIndexes.add(new Integer(opIndex));
+		opIndexes.add(Integer.valueOf(opIndex));
 		conflictSet.addRange(address, address);
 	}
 
@@ -735,7 +735,7 @@ class ReferenceMerger extends AbstractListingMerger {
 		if (opIndexList == null || opIndexList.size() == 0) {
 			return;
 		}
-		if (opIndexList.contains(new Integer(opIndex))) {
+		if (opIndexList.contains(Integer.valueOf(opIndex))) {
 			currentReference = null;
 			currentAddress = addr;
 			currentOpIndex = opIndex;
@@ -863,7 +863,7 @@ class ReferenceMerger extends AbstractListingMerger {
 		if (opIndexList == null || opIndexList.size() == 0) {
 			return;
 		}
-		if (opIndexList.contains(new Integer(opIndex))) {
+		if (opIndexList.contains(Integer.valueOf(opIndex))) {
 			// Check that the conflict still exists. It may have gotten resolved via another conflict.
 			if (!hasPrimaryConflict(addr, opIndex)) {
 				return;
