@@ -371,7 +371,7 @@ public class GhidraProject {
 			throw new IOException("Cancelled");
 		}
 		if (id >= 0) {
-			openPrograms.put(program, new Integer(program.startTransaction("")));
+			openPrograms.put(program, Integer.valueOf(program.startTransaction("")));
 		}
 	}
 
@@ -443,7 +443,7 @@ public class GhidraProject {
 		}
 		finally {
 			if (success || id >= 0) {
-				openPrograms.put(program, new Integer(program.startTransaction("")));
+				openPrograms.put(program, Integer.valueOf(program.startTransaction("")));
 			}
 		}
 
@@ -497,7 +497,7 @@ public class GhidraProject {
 		}
 		finally {
 			if (success || id >= 0) {
-				openPrograms.put(program, new Integer(program.startTransaction("")));
+				openPrograms.put(program, Integer.valueOf(program.startTransaction("")));
 			}
 		}
 	}
@@ -515,7 +515,7 @@ public class GhidraProject {
 			throw new IllegalStateException("Cannot checkpoint a read-only program");
 		}
 		program.endTransaction(id.intValue(), true);
-		openPrograms.put(program, new Integer(program.startTransaction("")));
+		openPrograms.put(program, Integer.valueOf(program.startTransaction("")));
 	}
 
 	/**
@@ -530,7 +530,7 @@ public class GhidraProject {
 			throw new IllegalStateException("Cannot rollback a read-only program");
 		}
 		program.endTransaction(id.intValue(), false);
-		openPrograms.put(program, new Integer(program.startTransaction("")));
+		openPrograms.put(program, Integer.valueOf(program.startTransaction("")));
 	}
 
 	/**
